--- a/Styles/style.css
+++ b/Styles/style.css
@@ -3932,6 +3932,8 @@ textarea.form-control-lg {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
+  gap: 0.5rem;
+  margin-bottom: 1rem;
 }
 .navbar-nav .nav-link {
   padding-right: 0;
